# kwin-integration

./: .gitignore  CMakeLists.txt  README.md  REUSE.toml  changelog.md
.github/workflows/: checks.yml  deploy.yml
scripts/: clang-format.sh
src/: CMakeLists.txt  main.cpp  metadata.json
src/dbus/: KandoIntegrationAdaptor.cpp  KandoIntegrationAdaptor.h
src/input/: PointerInput.cpp  PointerInput.h
src/plugin/: KandoKWinIntegrationPlugin.cpp  KandoKWinIntegrationPlugin.h
